--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-/* Fonte */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-body {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,25 +9,23 @@ body {
 #principal {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 100px;
-    border: 1px solid black;
-    background-color: #303030;
-    align-items: center;
     border-bottom: 1px solid #BABABA;
+    background-color: #303030;
 }
 
     #menu {
         display: flex;
-        width: 45%;
+        width: 55%;
         justify-content: space-around;
         align-items: center;
-
-        margin-left: 5%;
+        
     }
 
     #principal div a {
-        font-size: 25px;
+        font-size: 20px;
         font-weight: 600;
         color: white;
         text-decoration: none;
@@ -39,14 +36,13 @@ body {
     }
 
     #principal button {
+        margin-right: 5%;
+        background-color: #0C70F2;
+        border: 0;
         width: 80px;
         height: 40px;
-        margin-right: 5%;
-        border: 0px;
         font-size: 20px;
         font-weight: 600;
-        background-color: #0C70F2;
-        box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
         color: white;
-        cursor: pointer ;
+        box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
     }
