--- a/style.css
+++ b/style.css
@@ -1,9 +1,26 @@
+/* Fonte Usada */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+:root {
+    --azul-dnc: #0C70F2;
+    --preto-dnc: #303030;
+    --cinza-hover: #C9C9C9;
+
+    --fonte-padrao: 'Inter', sans-serif;
+}
+
+/* Cofig Padrão */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
+    font-family: var(--fonte-padrao);
+    outline: 0;
+}
+
+body {
+    background: linear-gradient(180deg, rgba(12, 122, 242, 0.5) 19.91%, rgba(12, 112, 242, 0) 24.84%), #303030;
+    background-repeat: no-repeat;
 }
 
 #principal {
@@ -13,7 +30,7 @@
     width: 100%;
     height: 100px;
     border-bottom: 1px solid #BABABA;
-    background-color: #303030;
+    background-color: var(--preto-dnc);
 }
 
     #menu {
@@ -32,12 +49,12 @@
     }
 
     #principal div a:hover {
-        color: #CCCCCC;
+        color: var(--cinza-hover);
     }
 
     #principal button {
         margin-right: 5%;
-        background-color: #0C70F2;
+        background-color: var(--azul-dnc);
         border: 0;
         width: 80px;
         height: 40px;
@@ -45,4 +62,94 @@
         font-weight: 600;
         color: white;
         box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
+    }
+
+/* Seção Principal do site */
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 100px 0 100px 0;
+}
+
+    header {
+        color: white;
+    }
+
+        header h1 {
+            font-size: 80px;
+            font-weight: 800;
+            text-transform: uppercase;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        header h2 {
+            text-align: center;
+            font-size: 40px;
+            font-weight: 700;
+            margin: 0 0 100px 0;
+        }
+
+        header .invert {
+            background-color: black;
+            font-weight: bold;
+            padding: 5px;
+        }
+
+/* Formulário */
+
+form {
+    color: white;
+    font-size: 30px;
+    font-weight: 600;
+    width: 35%;
+}
+
+    .form-group {
+        display: flex;
+        flex-direction: column;
+        margin: 10px 0 10px 0;
+    }
+
+    form input {
+        border-radius: 10px;
+        height: 35px;
+        border: 0;
+        font-size: 15px;
+        padding-left: 10px;
+    }
+
+        form input::placeholder {
+            color: rgba(57, 57, 57, 0.5);
+        }
+
+    form label {
+        margin: 10px 0 10px 0;
+    }
+
+    .checkbox-itens {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+        .checkbox-itens label {
+            font-size: 25px;
+        }
+
+    input[type="checkbox"]{
+        transform: scale(1.7);
+    }
+
+    input[type="submit"]{
+        background-color: rgba(12, 112, 242, 0.9);
+        width: 100%;
+        height: 56px;
+        font-size: 32px;
+        color: white;
+        margin-top: 100px;
+        box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
+        cursor: pointer;
     }
