--- a/style.css
+++ b/style.css
@@ -153,3 +153,136 @@ form {
         box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
         cursor: pointer;
     }
+
+/* Footer */
+
+footer {
+    width: 100%;
+    background-color: var(--azul-dnc);
+}
+
+    footer .linha1 {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    footer ul {
+        list-style-type: none;
+    }
+
+        footer ul li {
+            text-align: center;
+            color: white;
+            font-weight: 600;
+            font-size: 20px;
+            margin: 20px 0 20px 0;
+            cursor: pointer;
+        }
+
+            footer ul li a {
+                color: white;
+                text-decoration: none;
+            }
+
+            footer ul li a:hover {
+                color: var(--cinza-hover);
+            }
+
+    footer nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 330px;
+    }
+
+    footer h5 {
+        text-align: center;
+        color: white;
+        font-weight: 800;
+        font-size: 18px;
+        background-color: var(--preto-dnc);
+        border-radius: 10px;
+        padding: 13px;
+        align-items: center;
+        margin: 20px 0 15px 0; 
+    }
+
+    footer .endereco {
+        width: 25%;
+        color: white;
+        font-size: 20px;
+    }
+
+    footer .linha2 {
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        padding: 10px;
+    }
+
+        footer .linha2 a{
+            font-size: 18px;
+            font-weight: 600;
+            color: white;
+            text-decoration: none;
+            padding-right: 5px;
+        }
+
+            footer .linha2 a:hover {
+                color: var(--cinza-hover);
+            }
+
+            footer .linha2 a:last-child {
+                border-left: 3px solid white;
+            }
+
+/* Responsividade */
+@media only screen and (max-width: 600px) {
+    
+    /* MENU */
+    #principal {
+        flex-direction: column;
+        height: auto;
+    }
+
+        #principal button {
+            width: 100%;
+            margin: 0;
+        }
+
+    #menu {
+        flex-direction: column;
+        width: 100%;
+        margin: 0;
+    }
+
+    #menu a {
+        height: 50px;
+        align-items: center;
+        
+    }
+
+    /* Section */
+
+    section h1{
+        font-size: 38px;
+
+    }
+
+    section h2 {
+        font-size: 28px;
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+
+    form {
+        width: 95%;
+        font-size: 20px;
+    }
+
+    .checkbox-itens label{
+        font-size: 17px;
+    }
+}
