--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ footer {
         display: flex;
         justify-content: center;
         margin: 0;
-        padding: 10px;
+        padding-bottom: 10px;
     }
 
         footer .linha2 a{
@@ -236,6 +236,7 @@ footer {
 
             footer .linha2 a:last-child {
                 border-left: 3px solid white;
+                padding-left: 5px;
             }
 
 /* Responsividade */
@@ -285,4 +286,20 @@ footer {
     .checkbox-itens label{
         font-size: 17px;
     }
+
+    /* FOOTER */
+
+    footer .linha1 {
+        flex-direction: column;
+    }
+
+    footer .endereco {
+        width: 75%;
+        margin-bottom: 20px;
+    }
+
+    footer .linha2 {
+        padding-left: 80px;
+    }
+    
 }
